--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 
     //calendar view
     implementation 'com.github.kizitonwose:CalendarView:0.2.8'
+
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
